[package]
name = "chopchop"
version = "0.1.0"
edition = "2021"


[dependencies]
geo = { version = "0.28.0", features = ["serde", "use-serde"] }
geojson = "0.24.1"
serde = { version = "1.0.198", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
